# presentations

./: .gitignore  api_document.html  api_document.md  gleam.html  gleam.md  langsmith.html  langsmith.md  technical_moves.html  technical_moves.md  type_and_validation.html  type_and_validation.md
.github/workflows/: publish-gh-pages.yml
langsmith/: langsmith_log_create_run.json  langsmith_log_update_run.json
type_and_validation/python-code/: README.html  pyproject.toml
type_and_validation/python-code/python_code/: pydantic_example.py  pydantic_settings.py
type_and_validation/typescript/: package-lock.json  package.json
type_and_validation/typescript/src/: bad_validation.ts  zod_example.ts  zod_example_transform.ts
