[tool.poetry]
name = "python-code"
version = "0.1.0"
description = ""
authors = ["ndruger <snowfullnight@gmail.com>"]
readme = "README.md"
packages = [{include = "python_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
